--- a/ios/coderApp/Info.plist
+++ b/ios/coderApp/Info.plist
@@ -53,7 +53,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>RobotoSlab-Black.ttf</string>
+		<string>RobotoSlabBlack.ttf</string>
 		<string>RobotoSlab-Bold.ttf</string>
 		<string>RobotoSlab-ExtraBold.ttf</string>
 		<string>RobotoSlab-ExtraLight.ttf</string>
