--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-safe-area-context": "^4.2.3",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
