--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.2.3",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
